--- a/css/style.css
+++ b/css/style.css
@@ -8925,7 +8925,7 @@ textarea.form-control {
     left: 0;
     right: 0;
     bottom: 0;
-    background: #f67e7d;
+    background: #e8b34b;
     opacity: 0;
     content: '';
     z-index: -1;
